--- a/config/crd/bases/volumegroup.storage.dell.com_dellcsivolumegroupsnapshots.yaml
+++ b/config/crd/bases/volumegroup.storage.dell.com_dellcsivolumegroupsnapshots.yaml
@@ -23,7 +23,7 @@ spec:
       jsonPath: .spec.volumeGroupName
       name: VolumeGroupname
       type: string
-    name: v1alpha1
+    name: v1alpha2
     schema:
       openAPIV3Schema:
         description: DellCsiVolumeGroupSnapshot is the Schema for the dellcsivolumegroupsnapshots
@@ -50,9 +50,18 @@ spec:
                   Important: Run "make" to regenerate code after modifying this file'
                 type: string
               memberReclaimPolicy:
+                description: MemberReclaimPolicy describes a policy for end-of-life
+                  maintenance of VGS
+                enum:
+                - Delete
+                - Retain
                 type: string
               pvcLabel:
                 type: string
+              pvcList:
+                items:
+                  type: string
+                type: array
               volumesnapshotclass:
                 type: string
             type: object
@@ -72,7 +81,11 @@ spec:
                   of cluster Important: Run "make" to regenerate code after modifying
                   this file'
                 type: string
+              snapshotGroupName:
+                type: string
               snapshots:
+                type: string
+              status:
                 type: string
             type: object
         type: object
