--- a/test/helm/vgs-pvc-label.yaml
+++ b/test/helm/vgs-pvc-label.yaml
@@ -1,12 +1,10 @@
-apiVersion: volumegroup.storage.dell.com/v1alpha1
+apiVersion: volumegroup.storage.dell.com/v1alpha2
 kind: DellCsiVolumeGroupSnapshot
 metadata:
   name: "vgs-helm-test"
   namespace: "helmtest-vxflexos"
 spec:
   driverName: "csi-vxflexos.dellemc.com"
-  memberReclaimPolicy: "retain"
+  memberReclaimPolicy: "Delete"
   volumesnapshotclass: "vxflexos-snapclass"
   pvcLabel: "vgs-snap-label"
-  
-  
