--- a/vg.yaml
+++ b/vg.yaml
@@ -1,11 +1,18 @@
-apiVersion: volumegroup.storage.dell.com/v1alpha1
+apiVersion: volumegroup.storage.dell.com/v1alpha2
 kind: DellCsiVolumeGroupSnapshot
 metadata:
+  # Name must be 13 characters or less in length
   name: "vg-snaprun1"
   namespace: "helmtest-vxflexos"
 spec:
   # Add fields here
   driverName: "csi-vxflexos.dellemc.com"
-  memberReclaimPolicy: "retain"
+  # defines how to process VolumeSnapshot members when volume group snapshot is deleted
+  # "Retain" - keep VolumeSnapshot instances
+  # "Delete" - delete VolumeSnapshot instances
+  memberReclaimPolicy: "Retain"
   volumesnapshotclass: "vxflexos-snapclass"
   pvcLabel: "vgs-snap-label"
+  # pvcList:
+  #   - "pvcName1"
+  #   - "pvcName2"
