update v1alpha2 to v1

--- a/config/crd/bases/volumegroup.storage.dell.com_dellcsivolumegroupsnapshots.yaml
+++ b/config/crd/bases/volumegroup.storage.dell.com_dellcsivolumegroupsnapshots.yaml
@@ -30,7 +30,7 @@ spec:
       jsonPath: .status.status
       name: Status
       type: string
-    name: v1alpha2
+    name: v1
     schema:
       openAPIV3Schema:
         description: DellCsiVolumeGroupSnapshot is the Schema for the dellcsivolumegroupsnapshots
