--- a/samples/cron-template.yaml
+++ b/samples/cron-template.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: vxflexos
 data:
   vgs-config.yaml: |
-    apiVersion: volumegroup.storage.dell.com/v1alpha2
+    apiVersion: volumegroup.storage.dell.com/v1
     kind: DellCsiVolumeGroupSnapshot
     metadata:
       name: "vg-name-TIME"   # Swap out "vg-name" with name for VGS created 
