--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -15,6 +15,27 @@ jobs:
         uses: dell/common-github-actions/go-code-formatter-linter-vetter@main
         with:
           directories: ./...
+  test:
+    name: Run Go unit tests and check package coverage
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the code
+        uses: actions/checkout@v2
+      - name: Checkout csi-volumegroup-snapshotter
+        uses: actions/checkout@v2
+        with:
+          # change these to your driver name
+          repository: 'dell/csi-volumegroup-snapshotter'
+          path: 'csi-volumegroup-snapshotter'
+      - name: Run unit tests and check package coverage
+        uses: dell/common-github-actions/go-code-tester@fix-csi-driver-unit-tests
+        # set these three to appropriate values
+        with:
+          # dropping threshold to 80 since we're not at 90% yet
+          threshold: 80
+          # test-folder should be accurate for all csi-drivers
+          test-folder: "./controllers"
+          skip-list: "podmon/test/ssh"
   go_security_scan:
     name: Go security
     runs-on: ubuntu-latest
