--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -31,7 +31,7 @@ jobs:
         uses: dell/common-github-actions/go-code-tester@try-different-coverage-check
         with:
           threshold: 90
-          test-folder: "./service"
+          test-folder: "./controllers"
   go_security_scan:
     name: Go security
     runs-on: ubuntu-latest
