--- a/config/crd/bases/volumegroup.storage.dell.com_dellcsivolumegroupsnapshots.yaml
+++ b/config/crd/bases/volumegroup.storage.dell.com_dellcsivolumegroupsnapshots.yaml
@@ -69,6 +69,12 @@ spec:
                 items:
                   type: string
                 type: array
+              timeout:
+                description: A Duration represents the elapsed time between two instants
+                  as an int64 nanosecond count. The representation limits the largest
+                  representable duration to approximately 290 years.
+                format: int64
+                type: integer
               volumesnapshotclass:
                 type: string
             type: object
