--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -15,4 +15,4 @@
 # Matt Schmaelzle (mjsdell)
 
 # for all files:
-* @abhi16394 @bharathsreekanth @gallacher @JacobGro @jooseppi-luna @mjsdell
+* @abhi16394 @bharathsreekanth @gallacher @JacobGros @jooseppi-luna @mjsdell
