--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -8,11 +8,14 @@
 # order is alphabetical for easier maintenance.
 #
 # Abhilash (abhi16394)
+# Adarsh Kumar Yadav (adarsh-dell)
+# Akshay Saini (AkshaySainiDell)
 # Bharath Sreekanth (bharathsreekanth)
 # Gallacher Sean (gallacher)
 # Jacob Grosner (JacobGros)
 # Jooseppi Luna (jooseppi-luna)
 # Matt Schmaelzle (mjsdell)
+# Surya Prakash Gupta (suryagupta4)
 
 # for all files:
-* @abhi16394 @bharathsreekanth @gallacher @JacobGros @jooseppi-luna @mjsdell @harishp8889
+* @abhi16394 @adarsh-dell @AkshaySainiDell @bharathsreekanth @gallacher @JacobGros @jooseppi-luna @mjsdell @harishp8889 @suryagupta4
