add code owners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -16,6 +16,10 @@
 # Jooseppi Luna (jooseppi-luna)
 # Matt Schmaelzle (mjsdell)
 # Surya Prakash Gupta (suryagupta4)
+# Alik Saring (alikdell)
+# Aaron Tye (atye)
+# Shayna Finocchiaro (shaynafinocchiaro)
+# Luna Xu (xuluna)
 
 # for all files:
-* @abhi16394 @adarsh-dell @AkshaySainiDell @bharathsreekanth @gallacher @JacobGros @jooseppi-luna @mjsdell @harishp8889 @suryagupta4
+* @abhi16394 @adarsh-dell @AkshaySainiDell @bharathsreekanth @gallacher @JacobGros @jooseppi-luna @mjsdell @harishp8889 @suryagupta4 @alikdell @atye @shaynafinocchiaro @xuluna
