Fixed codeowners comment

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -10,7 +10,7 @@
 # Abhilash (abhi16394)
 # Adarsh Kumar Yadav (adarsh-dell)
 # Akshay Saini (AkshaySainiDell)
-# Aly Nathoo (
+# Aly Nathoo (anathoodell)
 # Bharath Sreekanth (bharathsreekanth)
 # Christian Coffield (ChristianAtDell)
 # Gallacher Sean (gallacher)
