--- a/test/helm/vgs/templates/sc.yaml
+++ b/test/helm/vgs/templates/sc.yaml
@@ -1,3 +1,5 @@
+# yamllint disable-file
+# This file is not valid YAML because it is a Helm template
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
@@ -10,7 +12,7 @@ parameters:
   systemID: {{ .Values.systemId }}
 volumeBindingMode: Immediate
 allowedTopologies:
-  - matchLabelExpressions:
-      - key: csi-vxflexos.dellemc.com/{{ .Values.systemId }}
-      values:
-        - csi-vxflexos.dellemc.com
+- matchLabelExpressions:
+  - key: csi-vxflexos.dellemc.com/{{ .Values.systemId }}
+    values:
+    - csi-vxflexos.dellemc.com
